refactor(async): Enhance `asyncCallEndlessly` and add tests for `asyncCallIteratively`
- Updated `asyncCallEndlessly` to improve readability by restructuring the lambda expression.
- Added thorough JUnit 5 test cases to validate `asyncCallIteratively` behavior under various scenarios, including empty iterators, batch processing, and single elements.

Signed-off-by: sinri <e.joshua.s.e@gmail.com>